# Nexus-MSME-EWS

./: .dockerignore  .gitignore  DEMO_SCRIPT.md  Dockerfile  MVP_PHASES.md  PHASES.md  ROADMAP.md  docker-compose.yml  plan.md  pyproject.toml  render.yaml  requirements-serve.txt  requirements.txt
data/processed/: phase4_scored_test.parquet
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
models/: baseline.joblib  calibrators.joblib  confidence_bands.joblib  fused.joblib  hazard.joblib  phase2_metrics.json  phase3_metrics.json  phase3_metrics_delinquency.json  phase3_metrics_target.json  phase4_metrics.json  phase5_metrics.json  phase6_metrics.json
scripts/: retrain_check.py  retrain_cron.md  run_all.py  run_phase1.py  run_phase10.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py  run_phase7.py
src/data/: load_german_credit.py  load_home_credit.py  quality.py
src/explainability/: __init__.py  counterfactual.py  narrative.py  uncertainty.py
src/features/: graph.py  panel.py  segmentation.py  structured.py  text.py  woe.py
src/governance/: __init__.py  fairness.py  rbi_mapping.py
src/mlops/: __init__.py  drift.py  retrain.py  tracking.py
src/models/: baseline.py  calibration.py  evaluate.py  (+5 more)
tests/: test_counterfactual.py  test_drift.py  test_graph_features.py  test_narrative.py  test_panel.py  test_promotion_gate.py  test_quality.py  test_router.py  test_segmentation.py  test_serving_phase8.py  test_splits.py  test_text_features.py  test_uncertainty.py
(+19 files in other folders)
